--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Web Application <small>coming soon</small></span>
-                                    <h3 class="projects__title">Chat Website</h3>
-                                    <a href="#" target="_blank" class="projects__button button button__small">
+                                    <span class="projects__subtitle">Web Application</span>
+                                    <h3 class="projects__title">Echo Social site</h3>
+                                    <a href="https://helpful-wisp-be54f3.netlify.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
